@@ -1,0 +1,65 @@
+/*
+ * Copyright 2006-2008 The FLWOR Foundation.
+ * 
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ * 
+ * http://www.apache.org/licenses/LICENSE-2.0
+ * 
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+
+#include "serialize_module.h"
+#include "serialize_function.h"
+
+namespace zorba { namespace serializemodule {
+
+  ItemFactory* SerializeModule::theFactory = 0;
+
+
+SerializeModule::~SerializeModule()
+{
+  for (FuncMap_t::const_iterator lIter = theFunctions.begin();
+       lIter != theFunctions.end(); ++lIter) {
+    delete lIter->second;
+  }
+  theFunctions.clear();
+}
+  
+StatelessExternalFunction*
+SerializeModule::getExternalFunction(String aLocalname) const
+{
+  StatelessExternalFunction*& lFunc = theFunctions[aLocalname];
+  if (!lFunc) {
+    if (aLocalname.equals("serialize")) {
+      lFunc = new SerializeFunction(this);
+    }
+  }
+  return lFunc;
+}
+
+void
+SerializeModule::destroy()
+{
+  if (!dynamic_cast<SerializeModule*>(this)) {
+    return;
+  }
+  delete this;
+}
+
+} /* namespace filemodule */ } /* namespace zorba */
+
+#ifdef WIN32
+#  define DLL_EXPORT __declspec(dllexport)
+#else
+#  define DLL_EXPORT __attribute__ ((visibility("default")))
+#endif
+
+extern "C" DLL_EXPORT zorba::ExternalModule* createModule() {
+  return new zorba::serializemodule::SerializeModule();
+}
