@@ -1,5 +1,6 @@
 import module namespace zu = "http://www.zorba-xquery.com/zorba/util-functions";
+import module namespace ser = "http://www.zorba-xquery.com/modules/serialize";
 
 let $message := zu:parse("<?xml version='1.0'?><a><b>textnode</b></a>")
 
-return zu:serialize-to-string($message)
+return ser:serialize($message)
